@startuml
title US30 – Domain Model View – Schedule Vaccine Administration

hide circle
skinparam classAttributeIconSize 0
hide methods

class SNSUser {
  + name : String
  + dateOfBirth : Date
  + phone : String
  + email : String
}

abstract VaccinationCenter {
  + name : String
  + postalAddress : String
  + phone : String
  + email : String
}

class VaccineType {
  + disease : String
  + shortDescription : String
}


class Appointment {
  + date : Date
  + time : Time
  + status : AppointmentStatus
  + arrivalDateTime : DateTime
}

class Receptionist {
  + name : String
  + phone : String
  + email : String
}

' Associations (as in global DM)
SNSUser "1" -- "0..*" Appointment : schedules
Appointment "0..*" -- "1" VaccinationCenter : at
Appointment "0..*" -- "1" VaccineType : is for
Appointment "0..*" -- "0..1" Receptionist : scheduledBy

VaccinationCenter "1" -- "0..*" VaccineType : supports

@enduml